--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <!-- The whole project is inside this -->
+  </div>
+  
   <script type="module" src="/src/main.jsx"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
